Fixed header layout issues when there is a long status message

--- a/resources/css/_header.scss
+++ b/resources/css/_header.scss
@@ -1,15 +1,19 @@
 .logo {
+	@include flex(0 0 auto);
 	font-family: Morpheus;
 	margin-top: -5px; // fix this fonts weird height
 	color: #000;
 }
 
 #status {
+	padding: 0 .5em;
 	font-size: .6em;
+	text-align: center;
 	color: #888;
 }
 
 .external-sites-icons {
+	@include flex(0 0 auto);
 	font-size: 1.2em;
 	position: relative;
 }
